--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore dev only modules [TESTING]
+modules/dev 
+
 # Ignore paths that contain user-generated content.
 sites/*/files
 sites/*/private
