Adding workbench_moderation via composer

--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "drupal/config_installer": "^1.0",
     "drupal/console": "^1",
     "drupal/core": "^8",
+    "drupal/workbench_moderation": "^1.2",
     "drush/drush": "~8",
     "rvtraveller/qs-composer-installer": "^1.1",
     "webflo/drupal-core-strict": "^8"
