--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
     "require": {
+    "cheppers/gathercontent-client": "dev-master",
     "composer/installers": "^1.0.20",
     "cweagans/composer-patches": "^1.0",
     "drupal-composer/drupal-scaffold": "^2.0.1",
