--- a/composer.json
+++ b/composer.json
@@ -92,19 +92,19 @@
       "export-configuration": "drush config-export --yes"
     },
     "drupal-scaffold": {
-      "source": "https://raw.githubusercontent.com/pantheon-systems/drops-8/{version}/{path}",
+      "source": "http://cgit.drupalcode.org/drupal/plain/{path}?h={version}",
+        "excludes": [
+          "google123.html",
+          "robots.txt"
+        ],
       "includes": [
-        "sites/default/default.services.pantheon.preproduction.yml",
-        "sites/default/settings.pantheon.php"
+        "sites/default/example.settings.my.php"
       ],
-      "excludes": [
-        ".csslintrc",
-        ".editorconfig",
-        ".eslintignore",
-        ".eslintrc.json",
-        ".htaccess",
-        "web.config"
-      ]
+      "initial": {
+        "sites/default/default.services.yml": "sites/default/services.yml",
+        "sites/default/default.settings.php": "sites/default/settings.php"
+      },
+      "omit-defaults": false
     }
   },
   "config": {
