--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "drupal/panelizer": "^4.0",
     "drupal/panels": "^4.2",
     "drupal/views_bootstrap": "^3.0",
+    "drupal/viewsreference": "^1.2",
     "drupal/workbench_moderation": "^1.2",
     "drush/drush": "~8",
     "guzzlehttp/guzzle": "^6.2@dev",
