--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "drupal/console": "^1",
     "drupal/core": "^8.4.5",
     "drupal/gathercontent": "^4.0",
+    "drupal/google_tag": "^1.0",
     "drupal/libraries": "^3.0",
     "drupal/linkit": "^4.3",
     "drupal/menu_export": "^1.0",
