--- a/web/modules/contrib/block_visibility_groups/block_visibility_groups.info.yml
+++ b/web/modules/contrib/block_visibility_groups/block_visibility_groups.info.yml
@@ -4,11 +4,11 @@ description: Allows the site administrator to easily manage complex visibility s
 # core: 8.x
 package: Other
 dependencies:
-  - block
+  - drupal:block
 
 
-# Information added by Drupal.org packaging script on 2016-08-28
-version: '8.x-1.1'
+# Information added by Drupal.org packaging script on 2018-09-09
+version: '8.x-1.3'
 core: '8.x'
 project: 'block_visibility_groups'
-datestamp: 1472414341
+datestamp: 1536509889
