--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     "drupal/libraries": "^3.0",
     "drupal/linkit": "^4.3",
     "drupal/menu_export": "^1.0",
+    "drupal/menu_trail_by_path": "^1.1",
     "drupal/panelizer": "^4.0",
     "drupal/panels": "^4.2",
     "drupal/permissions_by_term": "^1.44",
