--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     "drupal/permissions_by_term": "^1.44",
     "drupal/redirect": "^1.1",
     "drupal/views_bootstrap": "^3.0",
+    "drupal/views_custom_cache_tag": "^1.0",
     "drupal/viewsreference": "^1.2",
     "drupal/workbench_moderation": "^1.2",
     "drush/drush": "~8",
