--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "drupal/console": "^1",
     "drupal/core": "^8.5.0",
     "drupal/ds": "^3.1",
+    "drupal/easy_social": "^3.0",
     "drupal/gathercontent": "^4.0",
     "drupal/google_tag": "^1.0",
     "drupal/libraries": "^3.0",
