--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "drupal-composer/drupal-scaffold": "^2.0.1",
     "drupal/address": "~1.0",
     "drupal/block_visibility_groups": "^1.3",
+    "drupal/bootstrap_layouts": "^5.1",
     "drupal/bootstrap_paragraphs": "^2.0",
     "drupal/config_direct_save": "^1.0",
     "drupal/config_installer": "^1.0",
