--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     "drupal/easy_social": "^3.0",
     "drupal/gathercontent": "^4.0",
     "drupal/google_tag": "^1.0",
+    "drupal/imce": "^1.6",
     "drupal/libraries": "^3.0",
     "drupal/linkit": "^4.3",
     "drupal/menu_export": "^1.0",
