--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "drupal/video_embed_field": "^2.0",
     "drupal/views_bootstrap": "^3.0",
     "drupal/views_custom_cache_tag": "^1.0",
+    "drupal/views_infinite_scroll": "^1.5",
     "drupal/viewsreference": "^1.2",
     "drupal/workbench_moderation": "^1.2",
     "drush/drush": "~8",
