--- a/web/modules/contrib/permissions_by_term/bitbucket-pipelines.yml
+++ b/web/modules/contrib/permissions_by_term/bitbucket-pipelines.yml
@@ -1,12 +1,8 @@
-# This is a sample build configuration for PHP.
-# Check our guides at https://confluence.atlassian.com/x/e8YWN for more examples.
-# Only use spaces to indent your .yml configuration.
-# -----
-# You can specify a custom docker image from Docker Hub as your build environment.
 image: derh4nnes/pipeline-behat:latest
 clone:
   depth: full
-
+options:
+  size: 2x
 pipelines:
   default:
     - step:
@@ -15,7 +11,7 @@ pipelines:
           - composer
         script:
           - apt-get update
-          - apt-get install -y screen php7.1-sqlite libsqlite3-dev sqlite3
+          - apt-get install -y screen
           - curl -sL https://raw.githubusercontent.com/creationix/nvm/v0.33.8/install.sh -o install_nvm.sh
           - bash install_nvm.sh
           - source ~/.profile
@@ -27,17 +23,17 @@ pipelines:
           - mv permissions_by_term/ build/
           - cd build
           - composer create-project drupal-composer/drupal-project:8.x-dev drupal --stability dev --no-interaction
-          - (cd drupal && composer require behat/behat:^3.0 behat/mink-extension:^2.2 drupal/drupal-extension:^3.2 --dev)
+          - (cd drupal && composer require twig/twig:~1.37.0 behat/behat:^3.0 behat/mink-extension:^2.2 drupal/drupal-extension:^3.2 --dev)
           - mv permissions_by_term drupal/web/modules/
           - (cd drupal/web/modules/permissions_by_term/tests/ && ../../../../vendor/bin/phpunit --testdox)
           - (cd drupal/web/modules/permissions_by_term/js/ && npm install && npm run bat)
-          - (cd drupal/web && ../vendor/drush/drush/drush si standard --db-url=sqlite://sites/default/files/db.sqlite -y && ../vendor/drush/drush/drush en permissions_by_term -y)
+          - (cd drupal/web && ../vendor/drush/drush/drush si standard --db-url=mysql://root:testing@127.0.01/testing -y && ../vendor/drush/drush/drush en permissions_by_term -y)
           - (cd drupal && cp web/modules/permissions_by_term/tests/src/Behat/composer-require-namespace.php . && php composer-require-namespace.php && composer dump-autoload)
-          - (cd drupal && cat composer.json)
-          - screen -dmS php-server php -S localhost:8000 -t ./drupal/web
+          - (cd drupal/web && screen -dmS php-server php -S localhost:80 .ht.router.php)
           - (cd drupal/web && cp modules/permissions_by_term/tests/src/Behat/behat.yml.dist behat.yml && ../vendor/bin/behat)
         services:
           - testing
+          - mysql
     - step:
         name: Deploy
         script:
@@ -46,8 +42,12 @@ pipelines:
           - git config --global push.default simple
           - git config --global user.name "Peter Majmesku"
           - git push -u d.o
-          - git push --tags
 definitions:
   services:
     testing:
       image: darksolar/selenium-chrome-headless
+    mysql:
+      image: mechtecs/docker_big_mysql
+      environment:
+        MYSQL_ROOT_PASSWORD: testing
+        MYSQL_DATABASE: testing
