--- a/web/modules/contrib/permissions_by_term/permissions_by_term.info.yml
+++ b/web/modules/contrib/permissions_by_term/permissions_by_term.info.yml
@@ -7,11 +7,12 @@ dependencies:
   - 'drupal:taxonomy'
 type: module
 # core: '8.x'
-# version: '8.x-1.52'
+# version: '8.x-2.10'
 package: 'Permissions by Term'
+configure: permissions_by_term.settings
 
-# Information added by Drupal.org packaging script on 2018-08-21
-version: '8.x-1.61'
+# Information added by Drupal.org packaging script on 2019-03-13
+version: '8.x-2.10'
 core: '8.x'
 project: 'permissions_by_term'
-datestamp: 1534865890
+datestamp: 1552509798
