update: includes updates for SA-CONTRIB-2019-068, permissions_by_term.

--- a/web/modules/contrib/permissions_by_term/modules/permissions_by_entity/tests/modules/pbt_entity_test/pbt_entity_test.info.yml
+++ b/web/modules/contrib/permissions_by_term/modules/permissions_by_entity/tests/modules/pbt_entity_test/pbt_entity_test.info.yml
@@ -1,11 +1,10 @@
 name: 'pbt_entity_test'
 type: module
 description: 'Permissions by term - Entity test module'
-# core: 8.x
+core: 8.x
 package: Testing
 
-# Information added by Drupal.org packaging script on 2019-03-13
-version: '8.x-2.10'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2019-09-25
+version: '8.x-2.11'
 project: 'permissions_by_term'
-datestamp: 1552509798
+datestamp: 1569396491
