--- a/composer.json
+++ b/composer.json
@@ -1,145 +1,160 @@
 {
-  "name": "pantheon-systems/example-drops-8-composer",
-  "description": "Install drops-8 with Composer on Pantheon.",
-  "type": "project",
-  "license": "MIT",
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://packages.drupal.org/8"
-    }
-  ],
+    "name": "pantheon-systems/example-drops-8-composer",
+    "description": "Install drops-8 with Composer on Pantheon.",
+    "type": "project",
+    "license": "MIT",
+    "repositories": {
+        "0": {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        },
+        "repo": {
+            "type": "git",
+            "url": "git@github.com:sas-isus/pantheon_domain_masking.git"
+        }
+    },
     "require": {
-    "cheppers/gathercontent-client": "dev-master",
-    "composer/installers": "^1.0.20",
-    "cweagans/composer-patches": "^1.0",
-    "drupal-composer/drupal-scaffold": "^2.0.1",
-    "drupal/address": "~1.0",
-    "drupal/admin_toolbar": "^1.26",
-    "drupal/block_visibility_groups": "^1.3",
-    "drupal/bootstrap_layouts": "^5.1",
-    "drupal/bootstrap_paragraphs": "^2.0",
-    "drupal/colorbox": "^1.4",
-    "drupal/config_direct_save": "^1.0",
-    "drupal/config_installer": "^1.0",
-    "drupal/console": "^1",
-    "drupal/core": "8.7.8",
-    "drupal/ds": "^3.1",
-    "drupal/easy_social": "^3.0",
-    "drupal/editor_advanced_link": "^1.4",
-    "drupal/eva": "^1.3",
-    "drupal/gathercontent": "^4.0",
-    "drupal/google_tag": "^1.0",
-    "drupal/imce": "^1.6",
-    "drupal/libraries": "^3.0",
-    "drupal/linkit": "^4.3",
-    "drupal/login_security": "^1.5",
-    "drupal/menu_admin_per_menu": "^1.0",
-    "drupal/menu_export": "^1.0",
-    "drupal/menu_trail_by_path": "^1.1",
-    "drupal/panelizer": "^4.0",
-    "drupal/panels": "^4.2",
-    "drupal/pantheon_advanced_page_cache": "^1.0",
-    "drupal/permissions_by_term": "^2.10",
-    "drupal/redirect": "^1.1",
-    "drupal/simple_sitemap": "^3.4",
-    "drupal/taxonomy_menu": "^3.4",
-    "drupal/unpublished_node_permissions": "^1.0",
-    "drupal/video_embed_field": "^2.0",
-    "drupal/views_bootstrap": "^3.0",
-    "drupal/views_conditional": "^1.0",
-    "drupal/views_custom_cache_tag": "^1.0",
-    "drupal/views_field_formatter": "^1.9",
-    "drupal/views_infinite_scroll": "^1.5",
-    "drupal/viewsreference": "^1.2",
-    "drupal/webform": "^5.4",
-    "drupal/workbench_moderation": "^1.2",
-    "drush/drush": "~8",
-    "guzzlehttp/guzzle": "^6.2@dev",
-    "rvtraveller/qs-composer-installer": "^1.1",
-    "webflo/drupal-core-strict": "^8"
-  },
-  "require-dev": {
-    "mikey179/vfsstream": "^1.2",
-    "behat/behat": "3.*",
-    "behat/mink": "^1.7",
-    "behat/mink-extension": "^2.2",
-    "behat/mink-goutte-driver": "^1.2",
-    "jcalderonzumba/gastonjs": "^1.0.2",
-    "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
-    "drupal/drupal-extension": "^3.1",
-    "drush-ops/behat-drush-endpoint": "^0.0.4",
-    "pantheon-systems/quicksilver-pushback": "~1",
-    "phpunit/phpunit": "^4.8",
-    "symfony/css-selector": "^2.8"
-  },
-  "conflict": {
-      "drupal/drupal": "*"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "autoload": {
-    "classmap": [
-      "scripts/composer/ScriptHandler.php"
-    ]
-  },
-  "scripts": {
-    "build-assets": [
-      "@prepare-for-pantheon",
-      "composer install --optimize-autoloader"
-    ],
-    "lint": "find web/modules/custom web/themes/custom -name '*.php' -exec php -l {} \\;",
-    "code-sniff": "echo 'No code sniff step defined.'",
-    "unit-test": "echo 'No unit test step defined.'",
-    "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
-    "prepare-for-pantheon": "DrupalProject\\composer\\ScriptHandler::prepareForPantheon",
-    "post-install-cmd": [
-      "@drupal-scaffold",
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-    ],
-    "post-update-cmd": [
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-    ],
-    "post-create-project-cmd": [
-      "@drupal-scaffold",
-      "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
-    ]
-  },
-  "extra": {
-    "installer-paths": {
-      "web/core": ["type:drupal-core"],
-      "web/modules/contrib/{$name}": ["type:drupal-module"],
-      "web/profiles/contrib/{$name}": ["type:drupal-profile"],
-      "web/themes/contrib/{$name}": ["type:drupal-theme"],
-      "drush/contrib/{$name}": ["type:drupal-drush"]
+        "cheppers/gathercontent-client": "dev-master",
+        "composer/installers": "^1.0.20",
+        "cweagans/composer-patches": "^1.0",
+        "drupal-composer/drupal-scaffold": "^2.0.1",
+        "drupal/address": "~1.0",
+        "drupal/admin_toolbar": "^1.26",
+        "drupal/block_visibility_groups": "^1.3",
+        "drupal/bootstrap_layouts": "^5.1",
+        "drupal/bootstrap_paragraphs": "^2.0",
+        "drupal/colorbox": "^1.4",
+        "drupal/config_direct_save": "^1.0",
+        "drupal/config_installer": "^1.0",
+        "drupal/console": "^1",
+        "drupal/core": "8.7.8",
+        "drupal/ds": "^3.1",
+        "drupal/easy_social": "^3.0",
+        "drupal/editor_advanced_link": "^1.4",
+        "drupal/eva": "^1.3",
+        "drupal/gathercontent": "^4.0",
+        "drupal/google_tag": "^1.0",
+        "drupal/imce": "^1.6",
+        "drupal/libraries": "^3.0",
+        "drupal/linkit": "^4.3",
+        "drupal/login_security": "^1.5",
+        "drupal/menu_admin_per_menu": "^1.0",
+        "drupal/menu_export": "^1.0",
+        "drupal/menu_trail_by_path": "^1.1",
+        "drupal/panelizer": "^4.0",
+        "drupal/panels": "^4.2",
+        "drupal/pantheon_advanced_page_cache": "^1.0",
+        "drupal/pantheon_domain_masking": "^1.0.0",
+        "drupal/permissions_by_term": "^2.10",
+        "drupal/redirect": "^1.1",
+        "drupal/simple_sitemap": "^3.4",
+        "drupal/taxonomy_menu": "^3.4",
+        "drupal/unpublished_node_permissions": "^1.0",
+        "drupal/video_embed_field": "^2.0",
+        "drupal/views_bootstrap": "^3.0",
+        "drupal/views_conditional": "^1.0",
+        "drupal/views_custom_cache_tag": "^1.0",
+        "drupal/views_field_formatter": "^1.9",
+        "drupal/views_infinite_scroll": "^1.5",
+        "drupal/viewsreference": "^1.2",
+        "drupal/webform": "^5.4",
+        "drupal/workbench_moderation": "^1.2",
+        "drush/drush": "~8",
+        "guzzlehttp/guzzle": "^6.2@dev",
+        "rvtraveller/qs-composer-installer": "^1.1",
+        "webflo/drupal-core-strict": "^8"
     },
-    "build-env": {
-      "install-cms": [
-        "drush site-install standard --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes",
-        "drush pm-enable config_direct_save simple_block --yes",
-        "drush pm-uninstall block_content --yes"
-      ],
-      "export-configuration": "drush config-export --yes"
+    "require-dev": {
+        "mikey179/vfsstream": "^1.2",
+        "behat/behat": "3.*",
+        "behat/mink": "^1.7",
+        "behat/mink-extension": "^2.2",
+        "behat/mink-goutte-driver": "^1.2",
+        "jcalderonzumba/gastonjs": "^1.0.2",
+        "jcalderonzumba/mink-phantomjs-driver": "^0.3.1",
+        "drupal/drupal-extension": "^3.1",
+        "drush-ops/behat-drush-endpoint": "^0.0.4",
+        "pantheon-systems/quicksilver-pushback": "~1",
+        "phpunit/phpunit": "^4.8",
+        "symfony/css-selector": "^2.8"
     },
-    "drupal-scaffold": {
-      "source": "http://cgit.drupalcode.org/drupal/plain/{path}?h={version}",
-        "excludes": [
-          "google123.html",
-          "robots.txt"
+    "conflict": {
+        "drupal/drupal": "*"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "autoload": {
+        "classmap": [
+            "scripts/composer/ScriptHandler.php"
+        ]
+    },
+    "scripts": {
+        "build-assets": [
+            "@prepare-for-pantheon",
+            "composer install --optimize-autoloader"
         ],
-      "initial": {
-        "sites/default/default.services.yml": "sites/default/services.yml",
-        "sites/default/default.settings.php": "sites/default/settings.php"
-      },
-      "omit-defaults": false
+        "lint": "find web/modules/custom web/themes/custom -name '*.php' -exec php -l {} \\;",
+        "code-sniff": "echo 'No code sniff step defined.'",
+        "unit-test": "echo 'No unit test step defined.'",
+        "drupal-scaffold": "DrupalComposer\\DrupalScaffold\\Plugin::scaffold",
+        "prepare-for-pantheon": "DrupalProject\\composer\\ScriptHandler::prepareForPantheon",
+        "post-install-cmd": [
+            "@drupal-scaffold",
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+        ],
+        "post-update-cmd": [
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+        ],
+        "post-create-project-cmd": [
+            "@drupal-scaffold",
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+        ]
+    },
+    "extra": {
+        "installer-paths": {
+            "web/core": [
+                "type:drupal-core"
+            ],
+            "web/modules/contrib/{$name}": [
+                "type:drupal-module"
+            ],
+            "web/profiles/contrib/{$name}": [
+                "type:drupal-profile"
+            ],
+            "web/themes/contrib/{$name}": [
+                "type:drupal-theme"
+            ],
+            "drush/contrib/{$name}": [
+                "type:drupal-drush"
+            ]
+        },
+        "build-env": {
+            "install-cms": [
+                "drush site-install standard --account-mail={account-mail} --account-name={account-name} --account-pass={account-pass} --site-mail={site-mail} --site-name={site-name} --yes",
+                "drush pm-enable config_direct_save simple_block --yes",
+                "drush pm-uninstall block_content --yes"
+            ],
+            "export-configuration": "drush config-export --yes"
+        },
+        "drupal-scaffold": {
+            "source": "http://cgit.drupalcode.org/drupal/plain/{path}?h={version}",
+            "excludes": [
+                "google123.html",
+                "robots.txt"
+            ],
+            "initial": {
+                "sites/default/default.services.yml": "sites/default/services.yml",
+                "sites/default/default.settings.php": "sites/default/settings.php"
+            },
+            "omit-defaults": false
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "platform": {
+            "php": "7.1"
+        }
     }
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "platform": {
-      "php": "7.1"
-    }
-  }
 }
