--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "drupal/pantheon_advanced_page_cache": "^1.0",
         "drupal/pantheon_domain_masking": "^1.0.0",
         "drupal/paragraphs": "^1.11",
+        "drupal/pathauto": "^1.6",
         "drupal/permissions_by_term": "^2.10",
         "drupal/r4032login": "^1.1",
         "drupal/redirect": "^1.1",
