Add: twig_tweak, field_permissions, role_delegation

--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
         "drupal/extlink": "^1.2",
         "drupal/features": "^3.8",
         "drupal/field_group": "^3.0",
+        "drupal/field_permissions": "^1.1",
         "drupal/gathercontent": "^4.0",
         "drupal/google_tag": "^1.0",
         "drupal/image_widget_crop": "^2.2",
@@ -64,10 +65,12 @@
         "drupal/permissions_by_term": "^2.10",
         "drupal/r4032login": "^1.1",
         "drupal/redirect": "^1.1",
+        "drupal/role_delegation": "^1.1",
         "drupal/search_api": "^1.15",
         "drupal/simple_sitemap": "^3.4",
         "drupal/taxonomy_menu": "^3.4",
         "drupal/token": "^1.6",
+        "drupal/twig_tweak": "^2.6",
         "drupal/unpublished_node_permissions": "^1.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_bootstrap": "^3.0",
