--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "drupal/pantheon_domain_masking": "^1.0.0",
         "drupal/paragraphs": "^1.11",
         "drupal/pathauto": "^1.6",
-        "drupal/permissions_by_term": "^2.10",
+        "drupal/permissions_by_term": "2.25",
         "drupal/r4032login": "^1.1",
         "drupal/redirect": "^1.1",
         "drupal/role_delegation": "^1.1",
