--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "drupal/admin_toolbar": "^1.26",
         "drupal/anchor_link": "^1.7",
         "drupal/bg_image_formatter": "^1.12",
+        "drupal/block_class": "^1.3",
         "drupal/block_visibility_groups": "^1.3",
         "drupal/bootstrap_layouts": "^5.1",
         "drupal/bootstrap_paragraphs": "^2.0",
@@ -71,9 +72,11 @@
         "drupal/taxonomy_menu": "^3.4",
         "drupal/token": "^1.6",
         "drupal/twig_tweak": "^2.6",
+        "drupal/twitter_profile_widget": "^3.0",
         "drupal/unpublished_node_permissions": "^1.0",
         "drupal/video_embed_field": "^2.0",
         "drupal/views_bootstrap": "^3.0",
+        "drupal/views_bulk_operations": "^3.10",
         "drupal/views_conditional": "^1.0",
         "drupal/views_custom_cache_tag": "^1.0",
         "drupal/views_data_export": "^1.0",
