--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
+        "cheppers/gathercontent-client": "^1.0",
         "composer/installers": "^1.7",
         "cweagans/composer-patches": "^1.0",
         "drupal/address": "~1.0",
@@ -44,7 +45,7 @@
         "drupal/features": "^3.8",
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.1",
-        "drupal/gathercontent": "4.x-dev",
+        "drupal/gathercontent": "^4.0",
         "drupal/google_tag": "^1.0",
         "drupal/image_widget_crop": "^2.2",
         "drupal/imce": "^1.6",
