--- a/web/modules/contrib/simplesamlphp_auth/composer.json
+++ b/web/modules/contrib/simplesamlphp_auth/composer.json
@@ -4,14 +4,9 @@
     "type": "drupal-module",
     "license": "GPL-2.0+",
     "homepage": "https://www.drupal.org/project/simplesamlphp_auth",
-    "authors": [
-        {
-            "name": "Adam Malone",
-            "email": "adam@adammalone.net",
-            "homepage": "https://www.adammalone.net"
-        }
-    ],
     "require": {
-        "simplesamlphp/simplesamlphp": "~1.14.11"
+        "drupal/externalauth": "^1.1",
+        "simplesamlphp/simplesamlphp": "^1.18.2",
+        "drupal/core": "^8.7|^9.0"
     }
 }
