--- a/web/modules/contrib/simplesamlphp_auth/simplesamlphp_auth.routing.yml
+++ b/web/modules/contrib/simplesamlphp_auth/simplesamlphp_auth.routing.yml
@@ -4,26 +4,27 @@ simplesamlphp_auth.admin_settings:
     _title: 'SimpleSAMLphp Auth Settings'
     _form: '\Drupal\simplesamlphp_auth\Form\BasicSettingsForm'
   requirements:
-    _permission: 'administer simpleSAMLphp authentication'
+    _permission: 'administer simplesamlphp authentication'
 simplesamlphp_auth.admin_settings_local:
   path: '/admin/config/people/simplesamlphp_auth/local'
   defaults:
     _title: 'Local authentication'
     _form: '\Drupal\simplesamlphp_auth\Form\LocalSettingsForm'
   requirements:
-    _permission: 'administer simpleSAMLphp authentication'
+    _permission: 'administer simplesamlphp authentication'
 simplesamlphp_auth.admin_settings_sync:
   path: '/admin/config/people/simplesamlphp_auth/sync'
   defaults:
     _title: 'User info and syncing'
     _form: '\Drupal\simplesamlphp_auth\Form\SyncingSettingsForm'
   requirements:
-    _permission: 'administer simpleSAMLphp authentication'
+    _permission: 'administer simplesamlphp authentication'
 simplesamlphp_auth.saml_login:
   path: '/saml_login'
   defaults:
     _controller: '\Drupal\simplesamlphp_auth\Controller\SimplesamlphpAuthController::authenticate'
   requirements:
-    _access: 'TRUE'
+    _user_is_logged_in: 'FALSE'
   options:
-     no_cache: TRUE
+    _maintenance_access: TRUE
+    no_cache: TRUE
