--- a/web/modules/contrib/simplesamlphp_auth/tests/simplesamlphp_auth_test/simplesamlphp_auth_test.info.yml
+++ b/web/modules/contrib/simplesamlphp_auth/tests/simplesamlphp_auth_test/simplesamlphp_auth_test.info.yml
@@ -1,13 +1,12 @@
 name: 'SimpleSAMLPHP Authentication Test module'
 type: module
 description: 'Support module for SimpleSAMLPHP Authentication tests'
-# core: 8.x
+core: 8.x
 dependencies:
-  - user
+  - drupal:user
 hidden: true
 
-# Information added by Drupal.org packaging script on 2017-04-13
-version: '8.x-3.0-rc2'
-core: '8.x'
+# Information added by Drupal.org packaging script on 2020-01-30
+version: '8.x-3.2'
 project: 'simplesamlphp_auth'
-datestamp: 1492065547
+datestamp: 1580423955
