--- a/web/modules/contrib/gathercontent/gathercontent_ui/gathercontent_ui.info.yml
+++ b/web/modules/contrib/gathercontent/gathercontent_ui/gathercontent_ui.info.yml
@@ -6,3 +6,8 @@ type: module
 dependencies:
   - gathercontent
   - views
+
+# Information added by Drupal.org packaging script on 2020-05-12
+version: '8.x-4.3'
+project: 'gathercontent'
+datestamp: 1589277256
