SA-CORE-2021-006; Update: taxonomy_menu, simplesamlphp

--- a/composer.json
+++ b/composer.json
@@ -138,7 +138,8 @@
             "rm -rf vendor/simplesamlphp/simplesamlphp/config && ln -sf ../../../web/private/simplesamlphp/config vendor/simplesamlphp/simplesamlphp/config && rm -rf vendor/simplesamlphp/simplesamlphp/metadata && ln -sf ../../../web/private/simplesamlphp/metadata vendor/simplesamlphp/simplesamlphp/metadata"
         ],
         "post-update-cmd": [
-            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles"
+            "DrupalProject\\composer\\ScriptHandler::createRequiredFiles",
+            "rm -rf vendor/simplesamlphp/simplesamlphp/config && ln -sf ../../../web/private/simplesamlphp/config vendor/simplesamlphp/simplesamlphp/config && rm -rf vendor/simplesamlphp/simplesamlphp/metadata && ln -sf ../../../web/private/simplesamlphp/metadata vendor/simplesamlphp/simplesamlphp/metadata"
         ],
         "post-create-project-cmd": [
             "@drupal-scaffold",
