--- a/composer.json
+++ b/composer.json
@@ -49,6 +49,7 @@
         "drupal/gathercontent": "^4.0",
         "drupal/google_tag": "^1.0",
         "drupal/honeypot": "^2.0",
+        "drupal/image_resize_filter": "^1.1",
         "drupal/image_widget_crop": "^2.2",
         "drupal/imce": "^1.6",
         "drupal/libraries": "^3.0",
